--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,42 @@
 button {
   font-size: calc(10px + 2vmin);
 }
+.button-wrapper {
+  position: relative;
+  width: 150px;
+  text-align: center;
+  margin: 20% auto 2% auto;
+}
+
+.button-wrapper span.label {
+  position: relative;
+  z-index: 0;
+  display: inline-block;
+  width: 100%;
+  background: rgb(91, 128, 234);
+  cursor: pointer;
+  color: #fff;
+  padding: 10px 0;
+  text-transform:uppercase;
+  font-size:12px;
+}
+
+#upload {
+    display: inline-block;
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 50px;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    cursor: pointer;
+}
+.up-button{
+  background:#12173f;
+  color: #fff;
+  border-radius:10px;
+  padding:10px;
+  font-size: 12px;
+  cursor: pointer;
+}
